; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_umodem.c_umodem_ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_umodem.c_umodem_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucom_softc = type { %struct.umodem_softc* }
%struct.umodem_softc = type { i32 }
%struct.thread = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"cmd=0x%08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"unknown\0A\00", align 1
@ENOIOCTL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ucom_softc*, i32, i64, i32, %struct.thread*)* @umodem_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @umodem_ioctl(%struct.ucom_softc* %0, i32 %1, i64 %2, i32 %3, %struct.thread* %4) #0 {
  %6 = alloca %struct.ucom_softc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.thread*, align 8
  %11 = alloca %struct.umodem_softc*, align 8
  %12 = alloca i32, align 4
  store %struct.ucom_softc* %0, %struct.ucom_softc** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.thread* %4, %struct.thread** %10, align 8
  %13 = load %struct.ucom_softc*, %struct.ucom_softc** %6, align 8
  %14 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %13, i32 0, i32 0
  %15 = load %struct.umodem_softc*, %struct.umodem_softc** %14, align 8
  store %struct.umodem_softc* %15, %struct.umodem_softc** %11, align 8
  store i32 0, i32* %12, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 (i8*, ...) @DPRINTF(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* %7, align 4
  switch i32 %18, label %35 [
    i32 129, label %19
    i32 128, label %25
  ]

19:                                               ; preds = %5
  %20 = load %struct.umodem_softc*, %struct.umodem_softc** %11, align 8
  %21 = getelementptr inbounds %struct.umodem_softc, %struct.umodem_softc* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i64, i64* %8, align 8
  %24 = inttoptr i64 %23 to i32*
  store i32 %22, i32* %24, align 4
  br label %38

25:                                               ; preds = %5
  %26 = load i64, i64* %8, align 8
  %27 = inttoptr i64 %26 to i32*
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.umodem_softc*, %struct.umodem_softc** %11, align 8
  %30 = getelementptr inbounds %struct.umodem_softc, %struct.umodem_softc* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = icmp ne i32 %28, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %25
  br label %34

34:                                               ; preds = %33, %25
  br label %38

35:                                               ; preds = %5
  %36 = call i32 (i8*, ...) @DPRINTF(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %37 = load i32, i32* @ENOIOCTL, align 4
  store i32 %37, i32* %12, align 4
  br label %38

38:                                               ; preds = %35, %34, %19
  %39 = load i32, i32* %12, align 4
  ret i32 %39
}

declare dso_local i32 @DPRINTF(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
